# campster

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
.claude/: launch.json
.github/workflows/: azure-static-web-apps-delightful-dune-0592c0703.yml  ci.yml  claude-issues.yml  claude.yml
api/: requirements.txt
api/hikes/: __init__.py
backend/: app.py  auth.py  database.py  pyproject.toml  requirements.txt  sample_data.py  settings.py
backend/migrations/versions/: 3346e4d1340e_add_tripattachment.py  7f52175dc6b4_initial_migration.py  9c62ffdb6669_drop_supplytarget_name_unique_constraint.py  a2e3300f253c_add_meeting_point_to_trip.py  b8c6a8413062_add_attachment_model.py  cab89f782cfe_add_is_pending_to_user_model.py
backend/setup/: initial_setup.py  sample_data.py
client/: .eslintrc.cjs  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue
client/src/assets/: main.css
client/src/components/: AvatarImage.vue  CheckList.vue  ListSkeleton.vue  Navbar.vue  ParticipantList.vue  ProgressBar.vue  TheNavbar.vue  TripCard.vue  TripChecklist.vue  utils.js
client/src/composables/: auth.js
client/src/router/: index.js
client/src/views/: AboutView.vue  HomeView.vue  LoginView.vue  SettingsView.vue  SignUpView.vue  TripCheckListView.vue  TripDiscussionView.vue  TripHomeView.vue  TripSupplyView.vue  TripView.vue
docs/: api.md  migrations.md  readme.md
src/: App.svelte  ThemeProvider.svelte  main.ts
(+27 files in other folders)
